--- a/app/scss/ssigur/layout/_tags.scss
+++ b/app/scss/ssigur/layout/_tags.scss
@@ -3,6 +3,7 @@
 
 .tags{
   max-width: 400px;
+  width: 90%;
   margin: 0;
   padding: 0;
   text-align: center;
@@ -19,11 +20,11 @@
   }
 
   li{
-    display: inline;
+    display: inline-block;
     margin: auto 3px;
     text-transform: uppercase;
     font-size: em(12,16);
-    font-weight: 300;
+    font-weight: 500;
     white-space: nowrap;
 
 
@@ -40,6 +41,7 @@
 
      li{
        margin-left: 0;
+       float: left;
 
        &::before{
          /*color: $c-white;*/
